# illustrator-mcp-vectorizer

./: .gitignore  README.md  pyproject.toml
illustrator/: __init__.py  image_trace.py  server.py  vectorize_cli.py  vectorizer.py  visual_layers.py
skills/illustrator-vectorizer/: SKILL.md
skills/illustrator-vectorizer/agents/: openai.yaml
skills/illustrator-vectorizer/references/: parameters.md
tests/: test_image_trace.py  test_imports.py  test_server_vectorize.py  test_vectorize_cli.py  test_vectorizer.py  test_visual_layers.py
