[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "illustrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.1",
    "pillow>=11.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
illustrator = "illustrator.cli:run_server"
illustrator-vectorize = "illustrator.vectorize_cli:main"
